--- a/view/src/app/Components/CRM/crm-config/crm-config.component.html
+++ b/view/src/app/Components/CRM/crm-config/crm-config.component.html
@@ -23,7 +23,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Yes</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Yes</mat-radio-button><br>
                      <mat-radio-button value="2">No</mat-radio-button>
                   </mat-radio-group>
                </div>
@@ -34,7 +34,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Allow Tax On Lines</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Allow Tax On Lines</mat-radio-button><br>
                      <mat-radio-button value="2">lobal Tax</mat-radio-button>
                   </mat-radio-group>
                </div>
@@ -46,7 +46,7 @@
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
                      <mat-radio-button value="1">Allow Discount On Sale Order Lines</mat-radio-button><br>
-                     <mat-radio-button value="2">Global Discount Only</mat-radio-button>
+                     <mat-radio-button value="2" checked>Global Discount Only</mat-radio-button>
                   </mat-radio-group>
                </div>
             </div><br><hr>
@@ -61,7 +61,7 @@
                   </form> -->
                   <mat-radio-group>
                      <mat-radio-button value="1">%(Percentage)</mat-radio-button><br>
-                     <mat-radio-button value="2">Amount</mat-radio-button>
+                     <mat-radio-button value="2" checked>Amount</mat-radio-button>
                   </mat-radio-group>
                </div>
             </div><br><hr>
@@ -232,7 +232,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Yes</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Yes</mat-radio-button><br>
                      <mat-radio-button value="2">No</mat-radio-button>
                   </mat-radio-group>
                </div>
