--- a/view/src/app/Components/HR/Attendance-Report/list-attendance-report/list-attendance-report.component.html
+++ b/view/src/app/Components/HR/Attendance-Report/list-attendance-report/list-attendance-report.component.html
@@ -157,7 +157,7 @@
    <a [routerLink]="['/View_Attendance_Report']"><button mat-menu-item>
       <span>View</span>
    </button></a>
-   <button mat-menu-item>
+   <button mat-menu-item  (click)="DeleteAttendanceReport()">
       <span>Delete</span>
    </button>
 </mat-menu>
