--- a/view/src/app/Components/HR/Payroll-Master/list-payroll-master/list-payroll-master.component.html
+++ b/view/src/app/Components/HR/Payroll-Master/list-payroll-master/list-payroll-master.component.html
@@ -156,7 +156,7 @@
    <a [routerLink]="['/Create_Payroll_Master']"><button mat-menu-item>
       <span>Edit</span>
    </button></a>
-   <button mat-menu-item>
+   <button mat-menu-item  (click)="DeletePayrollMaster()">
       <span>Delete</span>
    </button>
 </mat-menu>
