--- a/view/src/app/Components/Inventory/inventory-config/inventory-config.component.html
+++ b/view/src/app/Components/Inventory/inventory-config/inventory-config.component.html
@@ -22,7 +22,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Yes</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Yes</mat-radio-button><br>
                      <mat-radio-button value="2">No</mat-radio-button>
                   </mat-radio-group>
                </div>
@@ -34,7 +34,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Sale Order</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Sale Order</mat-radio-button><br>
                      <mat-radio-button value="2">Delivery Order</mat-radio-button>
                   </mat-radio-group>
                </div>
@@ -45,7 +45,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Yes</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Yes</mat-radio-button><br>
                      <mat-radio-button value="2">No</mat-radio-button>
                   </mat-radio-group>
                </div>
@@ -62,7 +62,7 @@
                   </form> -->
                   <mat-radio-group>
                      <mat-radio-button value="1">Purchase Order</mat-radio-button><br>
-                     <mat-radio-button value="2">To Receive</mat-radio-button>
+                     <mat-radio-button value="2" checked>To Receive</mat-radio-button>
                   </mat-radio-group>
                </div>
             </div><br><hr>
@@ -73,7 +73,7 @@
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
                      <mat-radio-button value="1">Yes</mat-radio-button><br>
-                     <mat-radio-button value="2">No</mat-radio-button>
+                     <mat-radio-button value="2" checked>No</mat-radio-button>
                   </mat-radio-group>
                </div>
             </div><br><hr>
