--- a/view/src/app/Components/Product/list-product/list-product.component.html
+++ b/view/src/app/Components/Product/list-product/list-product.component.html
@@ -138,7 +138,7 @@
    <a [routerLink]="['/View_Product']"><button mat-menu-item>
       <span>View</span>
    </button></a>
-   <button mat-menu-item>
+   <button mat-menu-item (click)="DeleteProduct()">
       <span>Delete</span>
    </button>
    <button mat-menu-item>
