--- a/view/src/app/Components/Purchase/configuration/configuration.component.html
+++ b/view/src/app/Components/Purchase/configuration/configuration.component.html
@@ -125,7 +125,7 @@
                </div>
                <div class="col-sm-6 Right_data">
                   <mat-radio-group>
-                     <mat-radio-button value="1">Yes</mat-radio-button><br>
+                     <mat-radio-button value="1" checked>Yes</mat-radio-button><br>
                      <mat-radio-button value="2">No</mat-radio-button>
                   </mat-radio-group>
                </div>
