--- a/view/src/app/models/Accounts/Expense/model-expense/model-expense.component.css
+++ b/view/src/app/models/Accounts/Expense/model-expense/model-expense.component.css
@@ -1,8 +1,10 @@
+/* Model Content */
 .Modal_Content {
    width: 100%;
    height: 100%;
    padding: 0px 10px;
 }
+/* Model Header */
 .Modal_Header {
    position: relative;
    display: flex;
@@ -27,9 +29,23 @@
    top: -4px;
    cursor: pointer;
 }
+/* Model Body */
 .Model_Body {
    padding: 20px;
 }
+/* Model Footer */
+.Model_Footer {
+   border-top: 1px solid #e8e8e8;
+   height: 55px;
+   display: flex;
+   align-items: center;
+   position: relative;
+}
+.Model_Footer button {
+   position: absolute;
+   right: 0px;
+}
+/* Form Designs */
 .Form_Input label {
    font-size: 14px;
    margin-bottom: 5px;
@@ -103,22 +119,32 @@
    color: rgb(79, 107, 123);
    width: 100%;
 }
-.Model_Footer {
-   border-top: 1px solid #e8e8e8;
-   height: 55px;
-   display: flex;
-   align-items: center;
-   position: relative;
+/* ************************************ View Style ******************************* */
+.view_item {
+   display: grid;
+   grid-template-columns: 40% 15px auto;
 }
-.Model_Footer button {
-   position: absolute;
-   right: 0px;
+.view_item .Static{
+   font-weight: 700;
+   color: #4f6a7a;
+   margin-bottom: 10px;
+   font-size: 15px;
 }
-.Static{
+.view_item .dots{
    font-weight: 800;
    color: #4f6a7a;
+   margin-bottom: 10px;
+   font-size: 15px;
 }
-.Data{
+.view_item .Data{
    font-weight: 500;
    color: #4f6a7a;
+   margin-bottom: 10px;
+   font-size: 14px;
+}
+.Reject{
+   margin-left:20px;
+}
+.Modify{
+   margin-left:20px;
 }
