--- a/view/src/app/Components/Settings/Account-Settings/SubComponents/payment-terms-account-settings/payment-terms-account-settings.component.html
+++ b/view/src/app/Components/Settings/Account-Settings/SubComponents/payment-terms-account-settings/payment-terms-account-settings.component.html
@@ -31,7 +31,7 @@
                   <span class="Style_1"> {{ Item.Payment_Terms }}</span>
                </td>
                <td>
-                  <span class="Style_1"> {{ Item.Created_By }}</span>
+                  <span class="Style_1"> {{ Item.Created_By.Name }}</span>
                </td>
                <td>
                   <span class="Style_1">{{Item.updatedAt | date:'medium'}}</span>
