--- a/view/src/app/Components/Settings/Company-Settings/main-company-settings/main-company-settings.component.html
+++ b/view/src/app/Components/Settings/Company-Settings/main-company-settings/main-company-settings.component.html
@@ -34,9 +34,9 @@
               <div *ngIf="Active_Tab === 'Company_Info'">
                   <app-company-info-company-settings></app-company-info-company-settings>
               </div>
-              <!-- <div *ngIf="Active_Tab === 'Contact_Info'">
+              <div *ngIf="Active_Tab === 'Contact_Info'">
                   <app-contact-info-company-settings></app-contact-info-company-settings>
-              </div> -->
+              </div>
               <div *ngIf="Active_Tab === 'Departments'">
                   <app-departments-company-settings></app-departments-company-settings>
               </div>
