--- a/view/src/app/Components/Settings/CRM-Settings/Sub-Components/account-type-crm-settings/account-type-crm-settings.component.html
+++ b/view/src/app/Components/Settings/CRM-Settings/Sub-Components/account-type-crm-settings/account-type-crm-settings.component.html
@@ -1,3 +1,16 @@
+<div [ngClass]="{'Hide': !Loader}" class="DataLoaderStyle_1">
+   <div class="Loading">
+         <div class="spinner">
+            <div class="rect1"></div>
+            <div class="rect2"></div>
+            <div class="rect3"></div>
+            <div class="rect4"></div>
+            <div class="rect5"></div>
+            <div class="rect6"></div>
+         </div>
+   </div>
+ </div>
+ <div class="LoadedDataStyle_1" [ngClass]="{'Show': !Loader}">
 <!-- Page Header Part -->
 <div class="row header_part">
    <div class="col-sm-6">
@@ -23,102 +36,35 @@
          </tr>
       </thead>
       <tbody>
-         <tr>
+         <tr *ngFor="let Item of _List; let i=index" >
             <td>
-               <span class="S_no"> 1 </span>
+               <span class="S_no"> {{ i + 1 }} </span>
             </td>
             <td>
-               <span class="Style_1"> Type-11</span>
+               <span class="Style_1"> {{ Item.Account_Type }}</span>
             </td>
             <td>
-               <span class="Style_1">admin</span>
-            </td>
+             <span class="Style_1"> {{Item.Created_By.Name}}</span>
+                 <!-- <span class="Badge"> {{Item.Created_By.User_Type.User_Type}} </span> -->
+                 <br> 
+                 <span class="Time"> {{Item.createdAt | date:'medium'}}  </span>
+             
+          </td>
+          <td>
+             <span class="Style_1"> {{Item.Last_Modified_By.Name}} </span>
+                <!-- <span class="Badge"> {{Item.Last_Modified_By.User_Type.User_Type}} </span>  -->
+                <br> 
+                <span class="Time"> {{Item.updatedAt | date:'medium'}}  </span>
+             
+          </td>
             <td>
-               <span class="Style_1"> 18.10.18 </span>
-            </td>
-            <td>
-               <button (click)="ViewAccountType()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
+               <button *ngIf="_View" (click)="ViewAccountType(i)" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
                   <i class="material-icons">zoom_in</i>
                </button>
-               <button  (click)="CreateAccountType()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
+               <button  *ngIf="_Edit" (click)="EditAccountType(i)" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
                   <i class="material-icons">edit</i>
                </button>
-               <button (click)="DeleteCallSchedule()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-                  <i class="material-icons">delete_forever</i>
-               </button>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               <span class="S_no"> 2 </span>
-            </td>
-            <td>
-               <span class="Style_1"> Type-11</span>
-            </td>
-            <td>
-               <span class="Style_1">admin</span>
-            </td>
-            <td>
-               <span class="Style_1"> 18.10.18 </span>
-            </td>
-            <td>
-               <button (click)="ViewAccountType()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-                  <i class="material-icons">zoom_in</i>
-               </button>
-               <button  (click)="CreateAccountType()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-                  <i class="material-icons">edit</i>
-               </button>
-               <button (click)="DeleteCallSchedule()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-                  <i class="material-icons">delete_forever</i>
-               </button>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               <span class="S_no"> 3 </span>
-            </td>
-            <td>
-               <span class="Style_1"> Type-11</span>
-            </td>
-            <td>
-               <span class="Style_1">admin</span>
-            </td>
-            <td>
-               <span class="Style_1"> 18.10.18 </span>
-            </td>
-            <td>
-               <button  (click)="ViewAccountType()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-                  <i class="material-icons">zoom_in</i>
-               </button>
-               <button  (click)="CreateAccountType()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-                  <i class="material-icons">edit</i>
-               </button>
-               <button (click)="DeleteCallSchedule()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
-                  <i class="material-icons">delete_forever</i>
-               </button>
-            </td>
-         </tr>
-         <tr>
-            <td>
-               <span class="S_no"> 4 </span>
-            </td>
-            <td>
-               <span class="Style_1"> Type-11</span>
-            </td>
-            <td>
-               <span class="Style_1">admin</span>
-            </td>
-            <td>
-               <span class="Style_1"> 18.10.18 </span>
-            </td>
-            <td>
-               <button  (click)="ViewAccountType()" class="Table_Action_mini Bg_Info" mat-mini-fab color="primary">
-                  <i class="material-icons">zoom_in</i>
-               </button>
-               <button  (click)="CreateAccountType()" class="Table_Action_mini Bg_warning" mat-mini-fab color="primary">
-                  <i class="material-icons">edit</i>
-               </button>
-               <button (click)="DeleteCallSchedule()" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
+               <button *ngIf="_Delete" (click)=" DeleteAccountType(i)" class="Table_Action_mini Bg_Danger" mat-mini-fab color="primary">
                   <i class="material-icons">delete_forever</i>
                </button>
             </td>
