--- a/view/src/app/models/settings/account_settings/model-paymentterms-accountsettings/model-paymentterms-accountsettings.component.html
+++ b/view/src/app/models/settings/account_settings/model-paymentterms-accountsettings/model-paymentterms-accountsettings.component.html
@@ -42,12 +42,12 @@
             <div class="view_item">
                <div class="Static">Created By </div>
                <div class="dots"> : </div>
-               <div class="Data"> {{Data.Created_By}}</div>
+               <div class="Data"> {{Data.Created_By.Name}}</div>
             </div>
             <div class="view_item">
                <div class="Static">Last Modified By </div>
                <div class="dots"> : </div>
-               <div class="Data"> {{Data.Last_Modified_By}}</div>
+               <div class="Data"> {{Data.Last_Modified_By.Name}}</div>
             </div>
             <div class="view_item">
                <div class="Static"> Created Date </div>
